@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class FactoryBootstrapper
class CatalogoBootstrapper 
class ServicoBootstrapper 
class NovoCatalogoController
class PersistenceContext
class RepositoryFactory 
class CatalogoRepository
class ServicoRepository
class Catalogo
class Servico
class FormularioRepository
class Formulario

FactoryBootstrapper --> CatalogoBootstrapper
FactoryBootstrapper --> ServicoBootstrapper

CatalogoBootstrapper : execute()
CatalogoBootstrapper : register()

ServicoBootstrapper : execute()
ServicoBootstrapper : register()

NovoCatalogoController : register()
EspecificarServicoController : register()


CatalogoBootstrapper --> NovoCatalogoController

NovoCatalogoController --> CatalogoRepository
NovoCatalogoController --> PersistenceContext
NovoCatalogoController --> Catalogo


PersistenceContext : repositories()
NovoCatalogoController --> RepositoryFactory
RepositoryFactory : catalogos()
RepositoryFactory : servicos()
Catalogo : novoCatalogo()
CatalogoRepository : save(newCatalogo)


ServicoBootstrapper --> EspecificarServicoController

EspecificarServicoController --> ServicoRepository
EspecificarServicoController --> PersistenceContext
EspecificarServicoController --> Servico
EspecificarServicoController --> Formulario
PersistenceContext --> ServicoRepository
PersistenceContext --> CatalogoRepository
PersistenceContext --> FormularioRepository

EspecificarServicoController --> RepositoryFactory
Servico : novoServico()
ServicoRepository : save(newServico)

Formulario : novoFormulario()
FormularioRepository : save(newFormulario)


@enduml
